--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<title>Eduport - LMS, Education and Course Theme</title>
+	<title>Azerty - Plateforme de freelance</title>
 
 	<!-- Meta Tags -->
 	<meta charset="utf-8">
@@ -1538,7 +1538,7 @@ Footer START -->
 					<img class="light-mode-item h-40px" src="assets/images/logo.svg" alt="logo">
 					<img class="dark-mode-item h-40px" src="assets/images/logo-light.svg" alt="logo">
 				</a>
-				<p class="my-3">Eduport education theme, built specifically for the education centers which is dedicated to teaching and involve learners.</p>
+				<p class="my-3">AZERTY est une plateforme </p>
 				<!-- Social media icon -->
 				<ul class="list-inline mb-0 mt-3">
 					<li class="list-inline-item"> <a class="btn btn-white btn-sm shadow px-2 text-facebook" href="#"><i class="fab fa-fw fa-facebook-f"></i></a> </li>
@@ -1607,7 +1607,7 @@ Footer START -->
 									<ul class="dropdown-menu min-w-auto" aria-labelledby="languageSwitcher">
 										<li><a class="dropdown-item me-4" href="#"><img class="fa-fw me-2" src="assets/images/flags/uk.svg" alt="">Anglais</a></li>
 										<li><a class="dropdown-item me-4" href="#"><img class="fa-fw me-2" src="assets/images/flags/gr.svg" alt="">Allemand </a></li>
-										<li><a class="dropdown-item me-4" href="#"><img class="fa-fw me-2" src="assets/images/flags/sp.svg" alt="">Français</a></li>
+										<li><a class="dropdown-item me-4" href="#"><img class="fa-fw me-2" src="assets/images/flags/sp.svg" alt="">Espagnol</a></li>
 									</ul>
 								</div>
 							</li>
