--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Webestica.com">
-	<meta name="description" content="Eduport- LMS, Education and Course Theme">
+	<meta name="description" content="Azerty - plateformes de freelance et mise en relation avec les entreprises">
 
 	<!-- Dark mode -->
 	<script>
