--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<title>Azerty - Plateforme de freelance</title>
+	<title>Azerty - Plateformes de freelance et de mise en relation avec les entreprises</title>
 
 	<!-- Meta Tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="author" content="Webestica.com">
-	<meta name="description" content="Azerty - plateformes de freelance et mise en relation avec les entreprises">
+	<meta name="description" content="Azerty - Plateformes de freelance et de mise en relation avec les entreprises">
 
 	<!-- Dark mode -->
 	<script>
