--- a/profle_azerski.html
+++ b/profle_azerski.html
@@ -297,8 +297,16 @@
                                 </li>
                             </ul>
                         </li>
+                        
                     </ul>
                     <!-- Nav category menu END -->
+                    <!-- Nav Main menu START -->
+				<ul class="navbar-nav navbar-nav-scroll me-auto">
+					<!-- Nav item 1 Demos -->
+					<li class="nav-item"><a class="nav-link" href="list_client.html">Liste freelance</a></li>
+                    <li class="nav-item"><a class="nav-link" href="list_entreprise.html">Liste Entreprise</a></li>
+				</ul>
+				<!-- Nav Main menu END -->
     
                     <!-- Nav Search START -->
                     <div class="nav my-3 my-xl-0 px-4 flex-nowrap align-items-center">
