--- a/index.html
+++ b/index.html
@@ -300,6 +300,12 @@
 				</ul>
 				<!-- Nav category menu END -->
 
+				<ul class="navbar-nav navbar-nav-scroll me-auto">
+					<!-- Nav item 1 Demos -->
+					<li class="nav-item"><a class="nav-link" href="docs/alerts.html">Liste freelance</a></li>
+                    <li class="nav-item"><a class="nav-link" href="docs/alerts.html">Liste Entreprise</a></li>
+				</ul>
+
 				<!-- Nav Search START -->
 				<div class="nav my-3 my-xl-0 px-4 flex-nowrap align-items-center">
 					<div class="nav-item w-100">
