--- a/list_client.html
+++ b/list_client.html
@@ -302,8 +302,8 @@
 
 				<ul class="navbar-nav navbar-nav-scroll me-auto">
 					<!-- Nav item 1 Demos -->
-					<li class="nav-item"><a class="nav-link" href="docs/alerts.html">Liste freelance</a></li>
-                    <li class="nav-item"><a class="nav-link" href="docs/alerts.html">Liste Entreprise</a></li>
+					<li class="nav-item"><a class="nav-link" href="list_client.html">Liste freelance</a></li>
+                    <li class="nav-item"><a class="nav-link" href="list_entreprise.html">Liste Entreprise</a></li>
 				</ul>
 
 				<!-- Nav Search START -->
