--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
 					<!-- Nav item 1 Demos -->
 					<li class="nav-item"><a class="nav-link" href="list_client.html">Liste freelance</a></li>
                     <li class="nav-item"><a class="nav-link" href="list_entreprise.html">Liste Entreprise</a></li>
+					<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 				</ul>
 
 				<!-- Nav Search START -->
@@ -521,7 +522,7 @@ Main Banner START -->
 					</svg>
 				</figure>
 				<!-- Title -->
-				<h1 class="mb-0 display-6">Des freelances illimité à portée 
+				<h1 class="mb-0 display-6">Freelances illimitées à portée 
 					<span class="position-relative">de main
 						<!-- SVG START -->
 						<span class="position-absolute top-50 start-50 translate-middle ms-3 z-index-n1">
