--- a/list_client.html
+++ b/list_client.html
@@ -304,6 +304,7 @@
 					<!-- Nav item 1 Demos -->
 					<li class="nav-item"><a class="nav-link" href="list_client.html">Liste freelance</a></li>
                     <li class="nav-item"><a class="nav-link" href="list_entreprise.html">Liste Entreprise</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 				</ul>
 
 				<!-- Nav Search START -->
@@ -467,7 +468,7 @@
                                     <!-- Title -->
                                     <div class="d-sm-flex justify-content-sm-between mb-2 mb-sm-3">
                                         <div>
-                                            <h5 class="card-title mb-0"><a href="#">Azerski Djerbi</a></h5>
+                                            <h5 class="card-title mb-0"><a href="profle_azerski.html">Azerski Djerbi</a></h5>
                                             <p class="small mb-2 mb-sm-0">Marketing Stratégique digitale</p>
                                         </div>
                                         <span class="h6 fw-light">4.3<i class="fas fa-star text-warning ms-1"></i></span>
@@ -508,7 +509,7 @@
                         <div class="row g-0">
                             <!-- Image -->
                             <div class="col-md-4">
-                                <img src="assets/images/client/antoine.png" class="rounded-3" alt="...">
+                                <img src="assets/images/client/antoine.jpeg" alt="...">
                             </div>
     
                             <!-- Card body -->
@@ -517,7 +518,7 @@
                                     <!-- Title -->
                                     <div class="d-sm-flex justify-content-sm-between mb-2 mb-sm-3">
                                         <div>
-                                            <h5 class="card-title mb-0"><a href="#">Antoine Gimalac</a></h5>
+                                            <h5 class="card-title mb-0"><a href="#">Mohammed bou-saber</a></h5>
                                             <p class="small mb-2 mb-sm-0">Développeur Web Full Stack</p>
                                         </div>
                                         <span class="h6 fw-light">4.0<i class="fas fa-star text-warning ms-1"></i></span>
