--- a/profle_azerski.html
+++ b/profle_azerski.html
@@ -305,6 +305,7 @@
 					<!-- Nav item 1 Demos -->
 					<li class="nav-item"><a class="nav-link" href="list_client.html">Liste freelance</a></li>
                     <li class="nav-item"><a class="nav-link" href="list_entreprise.html">Liste Entreprise</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 				</ul>
 				<!-- Nav Main menu END -->
     
