--- a/profile_adel.html
+++ b/profile_adel.html
@@ -473,7 +473,7 @@
                         <ul class="list-group list-group-borderless">
                             <li class="list-group-item px-0">
                                 <span class="h6 fw-light"><i class="fas fa-fw fa-envelope text-primary me-1 me-sm-3"></i>Email:</span>
-                                <span>azersky.djerbi@gmail.com</span>
+                                <span>Adel@gmail.com</span>
                             </li>
                             <li class="list-group-item px-0">
                                 <span class="h6 fw-light"><i class="fas fa-fw fa-headphones text-primary me-1 me-sm-3"></i>Numéro de téléphone:</span>
@@ -488,49 +488,28 @@
                         <div class="row mt-4 g-3">
 
                             <!-- Skills START -->
-							<h4 class="mb-3">Compétences</h4>
+							<h4 class="mb-3">Sensibilité éco-responsable
+                            </h4>
 
 							<!-- Progress item -->
 							<div class="overflow-hidden mb-4">
-								<h6 class="uppercase">SEO </h6>
+								<h6 class="uppercase">Ecologie </h6>
 								<div class="progress progress-sm bg-primary bg-opacity-10">
-									<div class="progress-bar bg-primary aos" role="progressbar" data-aos="slide-right" data-aos-delay="200" data-aos-duration="1000" data-aos-easing="ease-in-out" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-										<span class="progress-percent-simple h6 mb-0">90%</span>
+									<div class="progress-bar bg-primary aos" role="progressbar" data-aos="slide-right" data-aos-delay="200" data-aos-duration="1000" data-aos-easing="ease-in-out" style="width: 80%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+										<span class="progress-percent-simple h6 mb-0">80%</span>
 									</div>
 								</div>
 							</div>
 
                             <!-- Progress item -->
 							<div class="overflow-hidden mb-4">
-								<h6 class="uppercase">Illustrator</h6>
+								<h6 class="uppercase">Impact positif</h6>
 								<div class="progress progress-sm bg-success bg-opacity-10">
 									<div class="progress-bar bg-danger aos" role="progressbar" data-aos="slide-right" data-aos-delay="200" data-aos-duration="1000" data-aos-easing="ease-in-out" style="width: 70%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
 										<span class="progress-percent-simple h6 mb-0">70%</span>
 									</div>
 								</div>
 							</div>
-
-							<!-- Progress item -->
-							<div class="overflow-hidden mb-4">
-								<h6 class="uppercase">Photoshop</h6>
-								<div class="progress progress-sm bg-success bg-opacity-10">
-									<div class="progress-bar bg-success aos" role="progressbar" data-aos="slide-right" data-aos-delay="200" data-aos-duration="1000" data-aos-easing="ease-in-out" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-										<span class="progress-percent-simple h6 mb-0">60%</span>
-									</div>
-								</div>
-							</div>
-
-							<!-- Progress item -->
-							<div class="overflow-hidden mb-4">
-								<h6 class="uppercase">Développement web</h6>
-								<div class="progress progress-sm bg-warning bg-opacity-15">
-									<div class="progress-bar bg-warning aos" role="progressbar" data-aos="slide-right" data-aos-delay="200" data-aos-duration="1000" data-aos-easing="ease-in-out" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-										<span class="progress-percent-simple h6 mb-0">40%</span>
-									</div>
-								</div>
-							</div>
-                        </div>
-                        <!-- Counter END -->
                     </div>
                     <!-- Main content END -->
                 </div><!-- Row END -->
